@@ -14,16 +14,16 @@ class AirbyteIntegrationTestJavaPlugin implements Plugin<Project> {
                 }
             }
         }
-        project.test.dependsOn('compileIntegrationTestJavaJava')
+        project.tasks.named('test').configure {
+            dependsOn project.tasks.named('compileIntegrationTestJavaJava')
+        }
 
         project.configurations {
             integrationTestJavaImplementation.extendsFrom testImplementation
             integrationTestJavaRuntimeOnly.extendsFrom testRuntimeOnly
         }
 
-        project.task('integrationTestJava', type: Test) {
-            mustRunAfter project.test
-
+        def integrationTestJava = project.tasks.register('integrationTestJava', Test) {
             testClassesDirs = project.sourceSets.integrationTestJava.output.classesDirs
             classpath += project.sourceSets.integrationTestJava.runtimeClasspath
 
@@ -41,31 +41,30 @@ class AirbyteIntegrationTestJavaPlugin implements Plugin<Project> {
 
             outputs.upToDateWhen { false }
 
-            if(project.hasProperty('airbyteDocker')) {
-                dependsOn project.airbyteDocker
+            maxParallelForks = Runtime.runtime.availableProcessors()
+            // This allows to set up a `gradle.properties` file inside the connector folder to reduce parallelization.
+            // This is especially useful for connectors that shares resources (like Redshift or Snowflake).
+            if (project.hasProperty('numberThreads')) {
+                int numberThreads = 0
+                String numberThreadsString = project.property('numberThreads').toString()
+                if (numberThreadsString.isInteger()) {
+                    numberThreads = numberThreadsString as int
+                }
+                 if (numberThreads > 0 && numberThreads < maxParallelForks) {
+                    maxParallelForks = numberThreads
+                }
             }
-
-            //This allows to set up a `gradle.properties` file inside the connector folder to reduce number of threads and reduce parallelization.
-            //Specially useful for connectors that shares resources (like Redshift or Snowflake).
-            ext.numberThreads = project.hasProperty('numberThreads') ? project.getProperty('numberThreads') as int : Runtime.runtime.availableProcessors() ?: 1
             maxHeapSize = '3g'
-            maxParallelForks = numberThreads
-
-            // This is needed to make the destination-snowflake tests succeed - https://github.com/snowflakedb/snowflake-jdbc/issues/589#issuecomment-983944767
-            jvmArgs = ["--add-opens=java.base/java.nio=ALL-UNNAMED"]
 
             systemProperties = [
                 // Allow tests to set @Execution(ExecutionMode.CONCURRENT)
                 'junit.jupiter.execution.parallel.enabled': 'true'
             ]
         }
-
-        // make sure we create the integrationTest task once in case a standard source test was already initialized
-        if(!project.hasProperty('integrationTest')) {
-            project.task('integrationTest')
+        integrationTestJava.configure {
+            mustRunAfter project.tasks.named('test')
+            dependsOn project.tasks.matching { it.name == 'assemble' }
+            dependsOn project.tasks.matching { it.name == 'spotbugsMain' }
         }
-
-        project.integrationTest.dependsOn(project.integrationTestJava)
-        project.integrationTest.dependsOn(project.spotbugsMain)
     }
 }
